# bene

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  CLAUDE.md  LICENSE  README.md  bene.yaml  bene.yaml.example  conftest.py  pyproject.toml  seed_engagement.py
.design/: factory-ai-brand-spec.md
.jules/: bolt.md
.supergoal/: BENE-CORE-FRAMEWORK-HELP-2026-06-16.md  DUE-DILIGENCE-2026-06-16-findings.json  DUE-DILIGENCE-2026-06-16.md  ROADMAP.md  STATE.md  THINKING.md  applied-memories.md  context.md  doc-fix-issues.json  render_research.py  repo-map.md  research-tech-docs.json  tools.md
_ga-bene-1-spa/: README.md  app.js  index.html  verify.sh
_ga-bene-2-live-viewer/: README.md  index.html  package.json
bene/: __init__.py  _safe.py  blobs.py  checkpoints.py  config.py  core.py  events.py  fts.py  intake.py  isolation.py  memory.py  schema.py  shared_log.py  skills.py  skills_discovery.py
blog/: how-we-build-bene.md  what-is-bene.md  why-bene.md
docker/: Dockerfile  README.md  docker-compose.yml  postgres-init.sh
docs/: README.md  architecture.md  checkpoints.md  cli-reference.md  codegen.md  dashboard.md  deployment.md  examples.md  integrating-bene.md  mcp-integration.md  memory.md  meta-harness.md  philosophy.md  primitive-review-cycle.md  probe-authoring.md  schema.md  shared-log.md  skills.md  use-cases.md
examples/: export_share.py  lighthouse_trace_probe.py  memory_search.py  meta_harness_coding.py  meta_harness_fraud_detection.py  meta_harness_math.py  meta_harness_support_tickets.py  parallel_refactor.py  safety_voting.py
internal-docs/: README.md
scripts/: _smoke_pr_cascade_breaker_gate.sh  _smoke_review_comment_signoff_gate.sh  enforce_review_bounds.sh  landing_copy_linter.py  launch_gate.py  lint  night_owl_review.py  pr_cascade_breaker_gate.py  review_comment_signoff_gate.py  test
site/: SKILL.md  build-blog.py  build-docs.py  index.html  llms.txt  test-harness.html
tests/: test_a2a.py  (+65 more)
(+540 files in other folders)
