[project]
name = "bene"
version = "0.2.1"
description = "BENE — Breeding-program Evolutionary Nexus for Engrams. Isolated, auditable, portable agent runtimes backed by SQLite."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Edward Tang" },
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "ulid-py>=1.1",
    "zstandard>=0.22",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mcp>=1.0",
    "rich>=13.0",
    "textual>=0.50",
    "cryptography>=44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
fuse = [
    "fusepy>=3.0",
]
langfuse = [
    "langfuse>=4",
]
a2a = [
    "a2a-sdk>=0.3,<1.0",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
benchmarks = [
    "numpy>=1.24",
]
temporal = [
    "temporalio>=1.6",
    "asyncpg>=0.29",
]

[project.scripts]
bene = "bene.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ship only the importable package. The repo root carries internal apparatus
# (.supergoal/ roadmaps, .cursor/ tooling, site/, docs/, tests/, .design/) that
# must never land in a public sdist; hatchling's default is "include everything
# tracked", so the sdist is pinned to an explicit allowlist here. only-include
# entries are root-anchored path prefixes (so "bene" does NOT match skills/bene/
# or .github/bene/); pyproject.toml + PKG-INFO are added by the sdist builder.
[tool.hatch.build.targets.sdist]
only-include = [
    "bene",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["bene"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
